# dbfresh

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  config.example.yaml  dbfresh.md  justfile  mkdocs.yml  pyproject.toml
.beads/: issues.jsonl
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: authoring-checks.md  calendar.md  checks.md  concepts.md  configuration.md  environment.md  expectations.md  extending.md  history.md  index.md  original-specification.md  quickstart.md  team-workflow.md  tui.md
src/dbfresh/: __init__.py  calendar.py  checks.py  cli.py  config.py  configurator.py  connection.py  docsgen.py  engine.py  env_hygiene.py  logsetup.py  models.py  registry.py  report.py  runner.py  store.py
src/dbfresh/adapters/: __init__.py  base.py  databricks.py  factory.py  postgres.py  sqlite.py  sqlserver.py
src/dbfresh/tui/: __init__.py  app.py  app.tcss  configure.py  dashboard.py  screens.py
tests/: conftest.py  test_assert_sql.py  test_assertions.py  test_calendar.py  test_calendar_engine.py  test_calendar_freshness.py  test_categories.py  test_check_id.py  test_cli_add.py  test_cli_config_discovery.py  test_cli_config_errors.py  test_cli_env_template.py  test_cli_history.py  test_cli_prune.py  test_cli_run.py  test_cli_ui.py  test_compile.py  test_config.py  test_config_calendar.py  test_config_composition.py  test_config_databricks_auth.py  test_config_defaults.py  test_config_env_vars.py  test_config_example.py  test_config_freshness_source.py  test_config_sources.py  test_config_validation.py  test_configurator_newlines.py  test_configurator_offers.py  test_configurator_propose.py  test_configurator_remove.py  test_configurator_rewrite.py  test_configurator_root_include.py  test_configurator_safety.py  test_configurator_source.py  test_configurator_timestamp.py  test_configurator_yaml.py  test_connection.py  test_databricks_adapter.py  test_dialects.py  (+42 more)
