[project]
name = "dbfresh"
version = "0.1.0"
description = "External, value-level freshness and constraint checks for SQL Server and Databricks data sources."
readme = "README.md"
authors = [
    { name = "Daniel Chudnov", email = "dchud@umich.edu" }
]
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "holidays>=0.100",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "textual>=8.2.8",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]

[project.scripts]
dbfresh = "dbfresh.cli:main"

[project.urls]
Homepage = "https://github.com/dchud/dbfresh"
Repository = "https://github.com/dchud/dbfresh"
Issues = "https://github.com/dchud/dbfresh/issues"

[project.optional-dependencies]
postgres = [
    "psycopg>=3.3.4",
]
sqlserver = [
    "pymssql>=2.3.13",
]
databricks = [
    "databricks-sql-connector>=4.3.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "mypy>=1.19",
    "pytest>=9.1.1",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
files = ["src/dbfresh"]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Optional runtime dependency (the "databricks" extra): not installed in
# the dev environment, so no stub or implementation is ever available
# here. The import itself lives inside DatabricksAdapter.__init__, not at
# module level, so the driver's absence never breaks a normal import.
module = ["databricks.*"]
ignore_missing_imports = true
